ACLOCAL_AMFLAGS = -I m4
bin_PROGRAMS=lora_detector_change_distance
lora_detector_change_distance_SOURCES=lora_detector_change_distance.c fields.c fields.h lora_packet.c lora_packet.h device_list.c device_list.h aes/aes.c aes/aes.h
lora_detector_change_distance_LDADD=-lunirec -ltrap -lm
include ./aminclude.am
